# copier-meta

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .pylintrc  AGENTS.md  CHANGELOG.md  Makefile  README.md  copier.yml  pyproject.toml
copier/: jinja_extensions.py  settings.yml
copier/questions/: template.yml  vcs.yml
meta-template/: .gitignore  Makefile  README.md.jinja  copier.yml  pyproject.toml.jinja
meta-template/.github/workflows/: test.yml
meta-template/copier/: settings.yml
meta-template/copier/extensions/: slugify.py
meta-template/copier/questions/: project.yml
meta-template/tests/: conftest.py  test_changelog.py  test_static.py  test_template.py  utils.py
tests/: __init__.py  conftest.py  test_generated_template.py  test_licenses.py  test_licenses_and_readme.py  test_meta_template.py  test_pyproject.py  test_pyproject_toml.py  test_readme.py  test_static.py  test_template_generation.py  utils.py
